# cs5023-rip-opportunity

./: .gitignore  CMakeLists.txt  README.md  package.xml
documents/: robot_code_documentation_p2.docx  world_launch_documentation_p2.docx
launch/: p1.launch  p2.launch  turtlebot_world.launch
resources/: project1.world
src/: cs5023-rip-opportunity.py  cs5023_rip_opportunity.py  keyboard.py  main.py  st_cp_test.py
src/speech_commands/: command_handler.py  command_parser.py  commands.gram  grammar.gram  speech_commands.py  speech_transcriber.py
src/speech_commands/data/: commands.fsg  commands.gram  keywords.txt
src/speech_commands/data/language/: README.md  pronounciation-dictionary.dict
test/: keywords.txt  microphone_transcribe.py
