<?xml version="1.0"?>
<package format="2">
  <name>cs5023-rip-opportunity</name>
  <version>0.0.0</version>
  <description>CS 5023 - Project 1</description>

  <maintainer email="cameronbost@ou.edu">Cameron Bost</maintainer>
  <maintainer email="timklense@ou.edu">Tim Klense</maintainer>
  <maintainer email="codystandridge@ou.edu">Cody Standridge</maintainer>
  <maintainer email="arianapaz@ou.edu">Ariana Paz</maintainer>
  <maintainer email="brycehennen@ou.edu">Bryce Hennen</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
